--- a/alembic.ini
+++ b/alembic.ini
@@ -62,8 +62,13 @@ version_path_separator = os
 # the output encoding used when revision files
 # are written from script.py.mako
 # output_encoding = utf-8
+import os
+from dotenv import load_dotenv
 
-sqlalchemy.url = postgresql+asyncpg://postgres:Liberty%%4023@127.0.0.1:5432/rp2025
+load_dotenv()
+sqlalchemy_url = os.getenv("sqlalchemy_url")
+
+sqlalchemy.url = sqlalchemy_url
 
 
 [post_write_hooks]
